# pispeak

./: .gitignore  LICENSE  README.md  feeddbtest.py  feedtest.py  movemp3file.py  mp3tagging.py  pyproject.toml  ttstest.py
src/pispeak/: feed_pull.py  feeddbtest.py  feedtest.py  movemp3file.py  mp3_move.py  mp3_tagging.py  mp3_tts.py  mp3tagging.py  pispeak.py  ttstest.py
