[tool.poetry]
name = "pispeak"
version = "0.1.0"
description = "RSS Feed Text to Speech MP3 Creation"
authors = ["Justin Lowen <Justin.G.Lowen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.10"
gTTS = "^2.3.2"
SQLite4 = "^0.1.1"
mutagen = "^1.47.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
